[package]
name = "lyceumnstubot"
version = "2.0.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/tapnisu/lyceumnstubot"
repository = "https://github.com/tapnisu/lyceumnstubot"

[dependencies]
itertools = "0.14.0"
log = "0.4"
pretty_env_logger = "0.5"
regex = "1.11"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
